--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -153,6 +153,22 @@
 			content: "\f097";
 		}
 	}
+	.active & {
+		&.i-pin {
+			&:before {
+				background: url(../images/icons/pin-active.png) no-repeat;
+				background-size: auto 100%;
+			}
+		}
+	}
+}
+a:hover {
+	.i-pin {
+		&:before {
+			background: url(../images/icons/pin-active.png) no-repeat;
+			background-size: auto 100%;
+		}
+	}
 }
 .shop-name {
 	width: 100%;
