--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -188,9 +188,9 @@
                 <!--add phone number-->
                 <div class="add-number-to-buy like-box">
                   <ul class="icon-tools">
-                    <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></li>
-                    <li class="m-pin"><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></li>     
-                    <li class="m-buy"><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></li>
+                  	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></a></li>
+                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>     
+                  	<li class="m-buy"><a href=""><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></a></li>
                     <li class="buy-now"><button class="btn btn-primary btn-number-action" type="button"><span class="icon"></span>Mua liền<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span></button></li>
                   </ul>
                 </div><!--./add phone number-->
@@ -325,8 +325,8 @@
             <!--pin-block-->
             <div class="info-block pin-block">
               <ul class="icon-tools">
-                <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></li>
-                <li class="m-pin pull-right"><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></li>
+              	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></a></li>
+              	<li class="m-pin pull-right"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></a></li>
               </ul>
             </div>
 
