--- a/myface-onface-html/src/views/shopper-product-detail.html
+++ b/myface-onface-html/src/views/shopper-product-detail.html
@@ -27,6 +27,14 @@
     	<div class="product-container">
         <!--product-info-block-->
         <div class="product-info-block mf-product-info-block">
+          <h2 class="shop-name">
+            <a class="shop-name-inner" href="myface-user-shop.html">
+              <span class="shop-img">
+                <img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+              </span>
+              <span class="shop-name-text">Home Venten Korean</span>
+            </a>
+          </h2>
 
           <!--products-gallery-->
       		<div class="col-sm-7 product-gallery">
@@ -154,9 +162,9 @@
                 <!--add phone number-->
                 <div class="add-number-to-buy like-box">
                   <ul class="icon-tools">
-                    <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></li>
-                    <li class="m-pin"><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></li>     
-                    <li class="m-buy"><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></li>
+                  	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Thích &lt;3</span></a></li>
+                  	<li class="m-pin"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim xem lại :)</span></a></li>     
+                  	<li class="m-buy"><a href=""><span class="icon i-cart"></span><span class="icon-text">Thêm vào giỏ</span></a></li>
                     <li class="buy-now"><button class="btn btn-primary btn-number-action" type="button"><span class="icon"></span>Mua liền<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span></button></li>
                   </ul>
                 </div><!--./add phone number-->
@@ -291,8 +299,8 @@
             <!--pin-block-->
             <div class="info-block pin-block">
               <ul class="icon-tools">
-                <li class="m-like"><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></li>
-                <li class="m-pin pull-right"><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></li>
+              	<li class="m-like"><a href=""><span class="icon i-like"></span><span class="icon-text">Chỉ thích thôi :)</span></a></li>
+              	<li class="m-pin pull-right"><a href=""><span class="icon i-pin"></span><span class="icon-text">Ghim để đó, rảnh xem lại :)</span></a></li>
               </ul>
             </div>
 
@@ -309,7 +317,7 @@
                         <a class="m-product-link" href="myface-product-detail.html">
                           <figure class="m-product-img">
                             <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
-                          </figure>  
+                          </figure> 
                         </a>
                       </div>
                     </div>
