--- a/myface-onface-html/src/assets/less/style/table.less
+++ b/myface-onface-html/src/assets/less/style/table.less
@@ -10,6 +10,11 @@
       > td {
         border-bottom: 1px solid @box-border-color;
       }
+      &:hover {
+      	> td {
+	        background-color: @gray;
+	      }
+      }
     }
   }
   > thead,
@@ -59,7 +64,7 @@
   > thead > tr {
     > th,
     > td {
-      border-bottom-width: 2px;
+      border-bottom-width: 1px;
     }
   }
 }
@@ -90,4 +95,13 @@
       border-bottom-width: 2px;
     }
   }
+}
+.table-striped {
+	> tbody {
+		> tr {
+			&:nth-of-type(odd) {
+			   background-color: #efefef;
+			}
+		}
+	}
 }
