--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -1,8 +1,9 @@
+{% set current_page = 'user-account-address-book' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="col-md-11 col-md-offset-1 wrap-user">
+	<div class="wrap-user">
 		<!--user-account-header-->
 		{% include "block/_account-header.html" %}
 		<!--/.user-account-header-->
@@ -10,7 +11,9 @@
 		{% include "block/_account-nav.html" %}
 		<!--./user-account-nav-->
 		<!--user-account-content-->
-		<div class="user-account-content general-content">
+		<div class="user-account-content address-content">
+			<div class="col-md-11 col-md-offset-1">
+			</div>
 		</div><!--./user-account-content-->
 	</div>
 </main>
