--- a/myface-onface-html/src/views/user-account-change-password.html
+++ b/myface-onface-html/src/views/user-account-change-password.html
@@ -2,7 +2,7 @@
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="col-md-11 col-md-offset-1 wrap-user">
+	<div class="wrap-user">
 		<!--user-account-header-->
 		{% include "block/_account-header.html" %}
 		<!--/.user-account-header-->
