--- a/myface-onface-html/src/views/user-account-general.html
+++ b/myface-onface-html/src/views/user-account-general.html
@@ -1,8 +1,9 @@
+{% set current_page = 'user-account-general' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="col-md-11 col-md-offset-1 wrap-user">
+	<div class="wrap-user">
 		<!--user-account-header-->
 		{% include "block/_account-header.html" %}
 		<!--/.user-account-header-->
@@ -11,61 +12,63 @@
 		<!--./user-account-nav-->
 		<!--user-account-content-->
 		<div class="user-account-content general-content">
-			<div class="col-md-6 user-account-left-side">
-				<div class="row general-product-row">
-					<ol class="m-product-list">
-	          {% for x in [1,2,3,4,5,6] %}  
-	          <!--m-product-item-->
-	          <li class="col-xs-6 m-product-item">
-	            <div class="m-product-inner">
-	              <div class="m-product-info">
-	                <a class="m-product-link" href="myface-product-detail.html">
-	                  <figure class="m-product-img">
-	                    <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
-	                  </figure>
-	                  <div class="m-product-hover">
-	                    <h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
-	                    <p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người...</p>
-	                    <div class="price-block">
-	                      <span class="price current">235.000<sup>đ</sup></span>
-	                      <span class="price original">325.000<sup>đ</sup></span> 
-	                    </div>
-	                  </div>  
-	                </a>
-	              </div>
-	            </div>
-	          </li>
-	          <!--/.m-product-item-->
-	          {% endfor %}
-	        </ol>
-	      </div>
-			</div>
-			<div class="col-md-offset-1 col-md-5 user-account-left-right">
-				<div class="row order-side">
-					<div class="item-property order-list">
-						<label class="item-property-label">Đơn hàng mua gần đây</label>
-						<ul class="item-property-values">
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
-	            </li>
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
-	            </li>
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
-	            </li>
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
-	            </li>
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
-	            </li>
-	            <li class="property-select">
-	              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
-	            </li>
-	          </ul>
-	        </div>
-	        <a class="order-list-more" href="user-account-order-info.html">Xem tất cả đơn hàng</a>
+			<div class="col-md-11 col-md-offset-1">
+				<div class="col-md-6 user-account-left-side">
+					<div class="row general-product-row">
+						<ol class="m-product-list">
+		          {% for x in [1,2,3,4,5,6] %}  
+		          <!--m-product-item-->
+		          <li class="col-xs-6 m-product-item">
+		            <div class="m-product-inner">
+		              <div class="m-product-info">
+		                <a class="m-product-link" href="myface-product-detail.html">
+		                  <figure class="m-product-img">
+		                    <img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">    
+		                  </figure>
+		                  <div class="m-product-hover">
+		                    <h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+		                    <p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người...</p>
+		                    <div class="price-block">
+		                      <span class="price current">235.000<sup>đ</sup></span>
+		                      <span class="price original">325.000<sup>đ</sup></span> 
+		                    </div>
+		                  </div>  
+		                </a>
+		              </div>
+		            </div>
+		          </li>
+		          <!--/.m-product-item-->
+		          {% endfor %}
+		        </ol>
+		      </div>
+				</div>
+				<div class="col-md-offset-1 col-md-5 user-account-left-right">
+					<div class="row order-side">
+						<div class="item-property order-list">
+							<label class="item-property-label">Đơn hàng mua gần đây</label>
+							<ul class="item-property-values">
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
+		            </li>
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
+		            </li>
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
+		            </li>
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
+		            </li>
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">101020102016</span></a>
+		            </li>
+		            <li class="property-select">
+		              <a class="" href="user-account-order-details.html"><span class="text">121020102016</span></a>
+		            </li>
+		          </ul>
+		        </div>
+		        <a class="order-list-more" href="user-account-order-info.html">Xem tất cả đơn hàng</a>
+					</div>
 				</div>
 			</div>
 		</div><!--./user-account-content-->
