--- a/myface-onface-html/src/views/user-account-gift-code.html
+++ b/myface-onface-html/src/views/user-account-gift-code.html
@@ -1,8 +1,9 @@
+{% set current_page = 'user-account-gift-code' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="col-md-11 col-md-offset-1 wrap-user">
+	<div class="wrap-user">
 		<!--user-account-header-->
 		{% include "block/_account-header.html" %}
 		<!--/.user-account-header-->
