--- a/myface-onface-html/src/views/user-account-payment-option.html
+++ b/myface-onface-html/src/views/user-account-payment-option.html
@@ -1,8 +1,9 @@
+{% set current_page = 'user-account-payment-option' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
 <main class="container">
-	<div class="col-md-11 col-md-offset-1 wrap-user">
+	<div class="wrap-user">
 		<!--user-account-header-->
 		{% include "block/_account-header.html" %}
 		<!--/.user-account-header-->
@@ -10,7 +11,39 @@
 		{% include "block/_account-nav.html" %}
 		<!--./user-account-nav-->
 		<!--user-account-content-->
-		<div class="user-account-content general-content">
+		<div class="user-account-content payment-content">
+			<div class="col-md-11 col-md-offset-1">
+				<div class="user-head">
+					<h2 class="user-title">Thông tin thanh toán</h2>
+				</div>
+				<div class="payment-info">
+					<p class="payment-text">
+						<span class="p-text">Tips:</span> Việc thiết lập thông tin thanh toán sẽ giúp bạn mua hàng thuận tiện hơn. Chúng tôi bảo mật & mã hóa thông tin thanh toán của bạn 100% tin cậy.
+					</p>
+					<div class="payment-block">
+						<div class="col-md-offset-1 form-group pay-form">
+		          <div class="radio color-radio">
+		            <label class="pay-control-1">
+		              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+		              <span><img src="assets/images/icons/c-cash.png" alt="myface">Thanh toán bằng tiền mặt khi nhận hàng (COD)</span>
+		            </label>
+		          </div>
+		          <div class="radio color-radio">
+		            <label class="pay-control-2">
+		              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+		              <span><img src="assets/images/icons/c-atm.png" alt="myface">Thanh toán bằng thẻ ATM có đăng ký Internet Bangking</span>
+		            </label>
+		          </div>
+		          <div class="radio color-radio">
+		            <label class="pay-control-3">
+		              <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
+		              <span><img src="assets/images/icons/c-bank.png" alt="myface">Chuyển khoản qua ngân hàng</span>
+		            </label>
+		          </div>
+		        </div>
+		      </div>
+				</div>
+			</div>
 		</div><!--./user-account-content-->
 	</div>
 </main>
