--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -235,4 +235,16 @@
     content: "\f077";
   }
 }
+.add-p-form-btn {
+	width: 100%;
+	color: @text-color-2;
+	border: @border;
+	i {
+		color: @green;
+		margin-right: 5px;
+	}
+	&:hover {
+		background-color: transparent;
+	}
+}
 
