--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -332,7 +332,7 @@
 
             <!--adr-->
             <div class="info-block adr">
-              <label class="block-title">Sản phẩm tương tự của Shop</label>
+            	<label class="block-title"><a href="#">Sản phẩm tương tự của Shop</a></label>
               <div class="row shop-list-row">
                 <ol class="m-product-list">
                   {% for x in [1,2,3,4] %}  
@@ -369,7 +369,7 @@
                 </ul>
               </div><!--/.color-property-->
             </div><!--/.product-property-->
-            <div class="info-block">
+            <div class="info-block safe-block">
               <label class="block-title">Mua hàng an toàn</label>
               <p class="">Tìm hiểu kỹ càng thông tin hàng hóa, Shop bán hàng trước khi đặt hàng.</p>
               <p class="">Xem kỹ phí vận chuyển, đóng gói, tổng số tiền phải trả. Liên hệ Shop khi có vấn đề chưa rõ.</p>
