--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -180,3 +180,10 @@
 	font-weight: 700;
 	margin-right: 5px;
 }
+.p-group-1 {
+	.checkbox {
+		margin-top: 10px;
+		margin-bottom: 15px;
+		color: @text-color-2;
+	}
+}
