--- a/myface-onface-html/src/views/user-account-address-book.html
+++ b/myface-onface-html/src/views/user-account-address-book.html
@@ -13,6 +13,123 @@
 		<!--user-account-content-->
 		<div class="user-account-content address-content">
 			<div class="col-md-11 col-md-offset-1">
+				<div class="user-head">
+					<h2 class="user-title">Thông tin giao hàng</h2>
+				</div>
+				<!--form-wrap-->
+				<div class="form-wrap">
+					<p class="form-text">
+						<span class="p-text">Tips:</span> Việc thiết lập thông tin thanh toán sẽ giúp bạn mua hàng thuận tiện hơn. Chúng tôi bảo mật & mã hóa thông tin thanh toán của bạn 100% tin cậy.
+					</p>
+					<!--form-horizontal-->
+					<div class="row form-horizontal form-div">
+						<div class="col-md-7 form-left" style="">
+		    			<div class="form-group checkout-group-1">
+	              <label for="" class="col-sm-4 control-label">Họ tên</label>
+	              <div class="col-sm-8">
+	              	<div class="rg-group-1-1">
+	              		<div class="default-dropdown">
+											<select class="form-control">
+			                  <option>Anh</option>
+			                  <option>Chị</option>
+			                </select>
+			              </div>
+		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+									</div>
+									<div class="rg-group-1-2">
+										<input type="text" class="form-control" placeholder="Ví dụ: Nguyễn Văn A">
+		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+									</div>
+	              </div>
+	            </div>
+	            <div class="form-group checkouta-group-2">
+	              <label for="" class="col-sm-4 control-label">Số điện thoại</label>
+	              <div class="col-sm-8">
+	                <input type="tel" class="form-control">
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+	              </div>
+	            </div>
+	            <div class="form-group checkout-group-3">
+	              <label for="" class="col-sm-4 control-label">Email</label>
+	              <div class="col-sm-8">
+	                <input type="email" class="form-control">
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+	              </div>
+	            </div>
+	            <div class="divider"></div>
+	            <div class="form-group checkout-group-4">
+	              <label for="" class="col-sm-4 control-label">Tỉnh/Thành phố</label>
+	              <div class="col-sm-8">
+	              	<div class="default-dropdown">
+		                <select class="form-control">
+		                  <option>Hồ Chí Minh</option>
+		                  <option>Hà Nội</option>
+		                  <option>Đồng Nai</option>
+		                </select>
+		              </div>
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+	              </div>
+	            </div>
+	            <div class="form-group checkout-group-5">
+	              <label for="" class="col-sm-4 control-label">Quận/Huyện-Phường/Xã</label>
+	              <div class="col-sm-8">
+	              	<div class="city-2">
+	              		<div class="default-dropdown">
+											<select class="form-control">
+			                  <option>Quận 1</option>
+			                  <option>Quận 2</option>
+			                  <option>Quận 3</option>
+			                </select>
+			               </div>
+		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+									</div>
+									<div class="city-3">
+										<div class="default-dropdown">
+											<select class="form-control">
+			                  <option>Phường 1</option>
+			                  <option>Phường 2</option>
+			                  <option>Phường 3</option>
+			                </select>
+			              </div>
+		                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+									</div>
+	              </div>
+	            </div>
+	            <div class="form-group checkout-group-6">
+	              <label for="" class="col-sm-4 control-label">Tên đường/Phố</label>
+	              <div class="col-sm-8">
+	                <input type="text" class="form-control">
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+	              </div>
+	            </div>
+	            <div class="form-group checkout-group-7">
+	              <label for="" class="col-sm-4 control-label">Số nhà/Ngõ/Ngách/Hẽm</label>
+	              <div class="col-sm-8">
+	                <input type="text" class="form-control">
+	                <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+	              </div>
+	            </div>
+	            <div class="form-group p-group-1">
+		            <div class="col-sm-8 col-sm-offset-4">
+			            <div class="checkbox color-radio block">
+			            	<label class="remember-text">
+		            	 		<input type="checkbox" name="" id="" value="">
+											<span>Đặt làm mặc định</span>
+			            	</label>
+			            </div>
+			            <div class="block">
+			            	<input type="submit" class="btn btn-primary update-p-form-btn" value="Cập nhật thông tin">
+			            </div>
+			          </div>
+	            </div>
+			    	</div>
+			    	<div class="col-md-2">
+			    		<button class="btn add-p-form-btn">
+			    			<i class="fa fa-plus-circle" aria-hidden="true"></i> Thêm địa chỉ mới
+			    		</button>
+			    	</div>
+		    	</div><!--/.form-horizontal-->
+				</div><!--/.form-wrap-->
 			</div>
 		</div><!--./user-account-content-->
 	</div>
