add responsive table

--- a/myface-onface-html/src/assets/less/style/page/myface-user.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-user.less
@@ -1,6 +1,9 @@
 .header-user-shop {
 	.myfaceshop-logo {
 		width: 135px;
+		height: 45px;
+		overflow: hidden;
+		margin-top: -3px;
 	}
 	.back-to-myface {
 		position: absolute; 
@@ -29,9 +32,11 @@
 		}
 	}
 	.user-shop-logo {
-		width: 100%; 
+		width: 120px; 
+		height: 45px;
 		padding-left: 30px; 
-		display: block;
+		display: table-cell;
+		vertical-align: middle;
 		color: @text-color-1;
 		h1 {
 			font-weight: 600;
