--- a/myface-onface-html/src/views/block/_account-header.html
+++ b/myface-onface-html/src/views/block/_account-header.html
@@ -28,7 +28,7 @@
 		</div>
 		<nav class="col-md-3 user-account-change-nav">
 			<ul class="nav navbar-nav">
-		    <li class="change-info-btn">
+		    <li class="change-info-btn {% if current_page == 'user-account-change-info' %}active{% endif %}">
 		    	<a href="user-account-change-info.html">Thay đổi thông tin</a>
 		    </li>
 		    <li class="more-nav">
