--- a/myface-onface-html/src/views/user-account-change-info.html
+++ b/myface-onface-html/src/views/user-account-change-info.html
@@ -1,3 +1,4 @@
+{% set current_page = 'user-account-change-info' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
@@ -11,6 +12,7 @@
 		<!--./user-account-nav-->
 		<!--user-account-content-->
 		<div class="user-account-content general-content">
+			
 		</div><!--./user-account-content-->
 	</div>
 </main>
