--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -2991,6 +2991,9 @@ a:hover .i-pin:before {
 }
 .header-user-shop .myfaceshop-logo {
   width: 135px;
+  height: 45px;
+  overflow: hidden;
+  margin-top: -3px;
 }
 .header-user-shop .back-to-myface {
   position: absolute;
@@ -3019,9 +3022,11 @@ a:hover .i-pin:before {
   font-size: 30px;
 }
 .header-user-shop .user-shop-logo {
-  width: 100%;
+  width: 120px;
+  height: 45px;
   padding-left: 30px;
-  display: block;
+  display: table-cell;
+  vertical-align: middle;
   color: #212121;
 }
 .header-user-shop .user-shop-logo h1 {
@@ -3856,4 +3861,64 @@ select.selectpicker {
   margin-bottom: 0;
   width: 100%;
   float: none;
+}
+.rwd-table {
+  margin: 1em 0;
+  min-width: 300px;
+}
+.rwd-table tr {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+.rwd-table th {
+  display: none;
+}
+.rwd-table td {
+  display: block;
+}
+.rwd-table td:first-child {
+  padding-top: .5em;
+}
+.rwd-table td:last-child {
+  padding-bottom: .5em;
+}
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 6.5em;
+  display: inline-block;
+}
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
+}
+.rwd-table th,
+.rwd-table td {
+  text-align: left;
+}
+@media (min-width: 480px) {
+  .rwd-table th,
+  .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child,
+  .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child,
+  .rwd-table td:last-child {
+    padding-right: 0;
+  }
+}
+.rwd-table th,
+.rwd-table td {
+  margin: .5em 1em;
+}
+@media (min-width: 480px) {
+  .rwd-table th,
+  .rwd-table td {
+    padding: 1em !important;
+  }
 }
