--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -247,4 +247,25 @@
 		background-color: transparent;
 	}
 }
+.btn-radius {
+	.btn-default;
+	border-radius: 20px;
+}
+.btn-view-more {
+	.btn-radius;
+	padding: 6px 20px;
+	margin-top: 10px;
+	i {
+		color: @text-color-2;
+		margin-left: 5px;
+	}
+	.shop-name {
+		font-weight: 600;
+	}
+	&:hover {
+		i {
+			color: #fff;
+		}
+	}
+}
 
