--- a/myface-onface-html/src/assets/less/style/variables.less
+++ b/myface-onface-html/src/assets/less/style/variables.less
@@ -38,6 +38,7 @@
 @bg-color-1: @secondary-color;
 @bg-color-2: #ebebeb;
 @bg-color-3: #f0f1f3;
+@bg-color-4: #f2f2f2;
 //line
 @line-color-1: #dfdfdf;
 @line-color-2: #ebebeb;
