--- a/myface-onface-html/src/views/checkout-step-1.html
+++ b/myface-onface-html/src/views/checkout-step-1.html
@@ -318,7 +318,7 @@
 	        </div>
 	      </div><!--/.cart-footer-->
         <div class="btn-checkout">
-					<button type="submit" class="btn btn-primary">Tiếp tục <i class="fa fa-angle-right"></i></button>
+					<button type="submit" class="btn btn-primary" onclick="location.href='checkout-step-2.html'">Tiếp tục <i class="fa fa-angle-right"></i></button>
 				</div>
       </div>
 		</div><!--/.box-cart-->
