--- a/myface-onface-html/src/views/checkout-step-2.html
+++ b/myface-onface-html/src/views/checkout-step-2.html
@@ -51,7 +51,7 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-pay">Đặt hàng <i class="fa fa-angle-right"></i></button>
+        <button type="submit" class="btn btn-primary btn-pay" onclick="location.href='checkout-step-3.html'">Đặt hàng <i class="fa fa-angle-right"></i></button>
 		  </div>
 		</div>
 	</div>
