--- a/myface-onface-html/src/views/myface-cart.html
+++ b/myface-onface-html/src/views/myface-cart.html
@@ -1,10 +1,12 @@
-{% extends "layout/_layout-checkout.html" %}
+{% extends "layout/_layout-checkout-myface.html" %}
 {% block header%}
 <header>
 	<div class="container">
 		<div class="col-xs-12 col-sm-6 col-lg-3 shop-logo">
-			<a href="#" title="DW Secret Saigon">
-				<h1 class="logo-text">DW Secret Saigon</h1>
+			<a href="index.html" title="myFace Shop">
+				<h1 class="logo-text">
+					<img class="" src="assets/images/logo/logo.png" alt="myface">	
+				</h1>
 			</a>
 		</div>
 		<!--checkout-process-->
