--- a/myface-onface-html/src/assets/less/style/modal.less
+++ b/myface-onface-html/src/assets/less/style/modal.less
@@ -45,3 +45,61 @@
 	border-top: 0;
 	border-radius: 0 0 3px 3px;
 }
+.n-modal {
+	.modal-header {
+		padding: 0;
+	}
+	.close {
+		width: 30px;
+    height: 30px;
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		z-index: 99;
+		opacity: 1;
+		background: url(../images/icons/close.png);
+		background-size: 100% 100%;
+		&:hover {
+			opacity: 1;
+			background-size: 100% 100%;
+		}
+	}
+	.modal-footer {
+		background-color: @bg-color-4;
+		p {
+			margin: 0;
+		}
+	}
+}
+#order-success-modal {
+	.modal-header {
+		border-color: transparent;
+	}
+	.modal-title {
+		color: @text-color-1;
+		font-size: 30px;
+		text-align: center;
+		padding: 15px 0;
+	}
+	.thanks-text {
+		font-size: 18px;
+		font-weight: 700;
+		.shop-name {
+			color: @primary-color;
+		}
+	}
+	.invoice-text {
+		font-size: 16px;
+	}
+	.invoice-number {
+		color: @green;
+		font-weight: 600;
+	}
+	.mf-view-more {
+		font-weight: 600;
+		text-decoration: underline;
+		&:hover {
+			text-decoration: none;
+		}
+	}
+}
