--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -101,7 +101,7 @@
 		        </li><!--/.account-block login-->
 		        <!--cart-block-->
 		        <li class="cart-block">
-		        	<a class="cart-link" href="cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
+		        	<a class="cart-link" href="myface-cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
 		        		<span class="cart-number">0</span>
 		        	</a>
 		        </li>
