--- a/myface-onface-html/src/views/shopper-product-detail.html
+++ b/myface-onface-html/src/views/shopper-product-detail.html
@@ -27,14 +27,6 @@
     	<div class="product-container">
         <!--product-info-block-->
         <div class="product-info-block mf-product-info-block">
-          <h2 class="shop-name">
-            <a class="shop-name-inner" href="myface-user-shop.html">
-              <span class="shop-img">
-                <img src="assets/images/upload/shop-img/user.jpg" alt="myface">
-              </span>
-              <span class="shop-name-text">Home Venten Korean</span>
-            </a>
-          </h2>
 
           <!--products-gallery-->
       		<div class="col-sm-7 product-gallery">
@@ -154,7 +146,9 @@
                   <div class="input-group send-group">
                     <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
                     <span class="input-group-btn">
-                      <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span></button>
+                      <button class="btn btn-primary btn-buy-submit" type="button" data-toggle="modal" data-target="#order-success-modal">
+                      	<span class="icon"></span>Đặt mua<span class="icon"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                      </button>
                     </span>
                   </div>
                 </div><!--./add phone number-->
@@ -276,7 +270,9 @@
             </div><!--/.product-property-->
 
             <div class="add-cart-block">
-              <button class="btn btn-primary btn-buy-now"><span class="icon"></span><span class="lr-text">Đặt mua</span><br><span class="sc-text">Nhận hàng - Trả tiền sau</span></button>
+              <button class="btn btn-primary btn-buy-now">
+              	<span class="icon"></span><span class="lr-text">Đặt mua</span><br><span class="sc-text">Nhận hàng - Trả tiền sau</span>
+              </button>
               <!--lightbox-wrap-->
               <div class="lightbox-wrap lightbox-1">
                 <!--add phone number-->
@@ -284,7 +280,9 @@
                   <div class="input-group send-group">
                     <input type="text" class="form-control" placeholder="Nhập số điện thoại của bạn">
                     <span class="input-group-btn">
-                      <button class="btn btn-primary btn-buy-submit" type="button"><span class="icon"></span>Đặt mua<span class="icon"></span></button>
+                      <button class="btn btn-primary btn-buy-submit" type="button" data-toggle="modal" data-target="#order-success-modal">
+                      	<span class="icon"></span>Đặt mua<span class="icon"></span>
+                      </button>
                     </span>
                   </div>
                 </div><!--./add phone number-->
@@ -306,7 +304,7 @@
 
             <!--adr-->
             <div class="info-block adr">
-              <label class="block-title">Sản phẩm tương tự của Shop</label>
+            	<label class="block-title"><a href="#">Sản phẩm tương tự của Shop</a></label>
               <div class="row shop-list-row">
                 <ol class="m-product-list">
                   {% for x in [1,2,3,4] %}  
@@ -343,7 +341,7 @@
                 </ul>
               </div><!--/.color-property-->
             </div><!--/.product-property-->
-            <div class="info-block">
+            <div class="info-block safe-block">
               <label class="block-title">Mua hàng an toàn</label>
               <p class="">Tìm hiểu kỹ càng thông tin hàng hóa, Shop bán hàng trước khi đặt hàng.</p>
               <p class="">Xem kỹ phí vận chuyển, đóng gói, tổng số tiền phải trả. Liên hệ Shop khi có vấn đề chưa rõ.</p>
@@ -362,4 +360,5 @@
   {% include "block/_fixed-block.html" %}
   <!--/.fixed-block-->
 </main>
+{% include "block/modal/_order-success-modal.html" %}
 {% endblock %}
