--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -235,10 +235,12 @@
     content: "\f077";
   }
 }
-.add-p-form-btn {
+.add-p-form-btn,
+.change-pass-link-btn {
 	width: 100%;
 	color: @text-color-2;
 	border: @border;
+	background-color: @line-color-1;
 	i {
 		color: @green;
 		margin-right: 5px;
