--- a/myface-onface-html/src/assets/less/style/page/checkout.less
+++ b/myface-onface-html/src/assets/less/style/page/checkout.less
@@ -67,6 +67,18 @@
 	main {
 		margin-bottom: 70px;
 	}
+	.table {
+	  //Cells
+	  > tbody{
+	    > tr {
+	      &:hover {
+	      	> td {
+		        background-color: transparent;
+		      }
+	      }
+	    }
+	  }
+	}
 }
 .checkout-step-1 {
 	.control-label {
