--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -29,6 +29,11 @@
 				border-color: @primary-color;
 			}	
 		}
+		&.active {
+			a {
+				background-color: @line-color-1;
+			}
+		}
 	}
 	&.cate-h-1{
 		.cate-item {
