--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -41,7 +41,9 @@
 @import "page/product-detail.less";
 @import "page/search-result.less";
 @import "page/account.less";
+@import "page/myface-checkout.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
 @import "plugin/rwd-table.less";
+@import "plugin/bootstrap-datetimepicker.less";
