--- a/myface-onface-html/src/views/block/_fixed-block.html
+++ b/myface-onface-html/src/views/block/_fixed-block.html
@@ -1,7 +1,7 @@
 <div class="fixed-block">
   <!--cart-block-->
   <div class="cart-block">
-    <a class="cart-link" href="cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
+    <a class="cart-link" href="myface-cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
       <span class="cart-number">0</span>
     </a>
   </div>
