--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -24,9 +24,9 @@
       	<div class="col-xs-6 col-md-2 f-block-2">
       		<ul class="list-group">
             <li class="li-item f-phone">
-              <a href="tel:1900 636 099">
+              <a href="tel:1900636798">
                 Hotline hỗ trợ
-                <span class="f-title">1900 636 099</span>
+                <span class="f-title">1900 636 798</span>
                 (08-18h / T2-T7)
               </a>
             </li>
