--- a/myface-onface-html/src/views/myface-product-detail.html
+++ b/myface-onface-html/src/views/myface-product-detail.html
@@ -20,8 +20,11 @@
               <li><a href="myface-category-2.html">Thời trang khác 3</a></li>
             </ul>
           </li>
-          <li class="tab-item tab-single">
+          <li class="tab-item tab-single bread-crumb-item">
             <a href="myface-category-2.html">Thời trang nữ</a>
+          </li>
+          <li class="tab-item tab-single bread-crumb-item">
+            <a href="myface-category-2.html">Thời trang lữ hành</a>
           </li>
         </ul>
       </nav><!--/.tabs-bar-->
