--- a/myface-onface-html/src/views/user-account-change-password.html
+++ b/myface-onface-html/src/views/user-account-change-password.html
@@ -10,7 +10,33 @@
 		{% include "block/_account-nav.html" %}
 		<!--./user-account-nav-->
 		<!--user-account-content-->
-		<div class="user-account-content general-content">
+		<div class="user-account-content change-pass-content">
+			<div class="col-md-11 col-md-offset-1">
+				<!--form-horizontal-->
+				<div class="form-horizontal change-form">
+					<h4 class="col-md-offset-1 form-title">Thay đổi mật khẩu</h4>
+					<div class="col-md-4 col-md-offset-1 form-left">
+	    			<div class="form-group checkout-group-1">
+              <label for="" class="control-label">Mật khẩu cũ:</label>
+              <input type="password" class="form-control">
+	            <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+            </div>
+            <div class="form-group checkout-group-4">
+              <label for="" class="control-label">Nhập mật khẩu mới:</label>
+              <input type="password" class="form-control">
+              <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+            </div>
+            <div class="form-group checkouta-group-5">
+              <label for="" class="control-label">Nhập lại mật khẩu mới:</label>
+              <input type="password" class="form-control">
+              <label for="" class="error">Vui lòng nhập đủ thông tin</label>
+            </div>
+            <div class="form-group p-group-1">
+	            <input type="submit" class="btn btn-primary update-p-form-btn" value="Thay đổi mật khẩu">
+            </div>
+		    	</div>
+	    	</div><!--/.form-horizontal-->
+			</div>
 		</div><!--./user-account-content-->
 	</div>
 </main>
