--- a/myface-onface-html/src/views/block/_script.html
+++ b/myface-onface-html/src/views/block/_script.html
@@ -1,4 +1,6 @@
 <script src="assets/js/lib/jquery.js" type="text/javascript"></script>
+<script src="assets/js/plugin/moment.min.js" type="text/javascript"></script>
 <script src="assets/js/plugin/bootstrap.js" type="text/javascript"></script>
 <script src="assets/js/plugin/bootstrap-select.js" type="text/javascript"></script>
+<script src="assets/js/plugin/bootstrap-datetimepicker.js" type="text/javascript"></script>
 <script src="assets/js/script.js" type="text/javascript"></script>
