--- a/myface-onface-html/src/views/myface-cart.html
+++ b/myface-onface-html/src/views/myface-cart.html
@@ -1,4 +1,5 @@
-{% extends "layout/_layout-checkout-myface.html" %}
+{% extends "cart.html" %}
+{% block page-containerclass%}checkout checkout-myface{% endblock %}
 {% block header%}
 <header>
 	<div class="container">
@@ -14,7 +15,7 @@
 		</div><!--/.checkout-process-->
 		<div class="col-xs-12 col-sm-6 col-lg-3">
 			<div class="row hotline">
-				<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636099">1900 636 099</a></span>
+				<span class="hotline-text">Hotline hỗ trợ:<a class="hotline-number" href="tel:+1900636798">1900 636 798</a></span>
 				<span class="note">(08-18h, T2-T7)</span>
 			</div>
 		</div>
@@ -161,11 +162,11 @@
 	        </div>
 	      </div><!--/.cart-footer-->
         <div class="btn-checkout">
-					<button type="submit" class="btn btn-primary" onclick="location.href='checkout-step-1.html'">Đặt hàng <i class="fa fa-angle-right"></i></button>
+					<button type="submit" class="btn btn-primary" onclick="location.href='myface-checkout-step-1.html'">Đặt hàng <i class="fa fa-angle-right"></i></button>
 				</div>
       </div>
 		</div><!--/.box-cart-->
-		<p class="cart-back-box"><a class="cart-back-btn" href="myface-shop.html">Mua thêm sản phẩm khác <i class="fa fa-angle-right"></i></a></p>
+		<p class="cart-back-box"><a class="cart-back-btn" href="index.html">Mua thêm sản phẩm khác <i class="fa fa-angle-right"></i></a></p>
 	</div>
 </main>
 {% endblock %}
