--- a/myface-onface-html/src/assets/less/style/buttons.less
+++ b/myface-onface-html/src/assets/less/style/buttons.less
@@ -237,7 +237,7 @@
 }
 .add-p-form-btn,
 .change-pass-link-btn {
-	width: 100%;
+	width: 165px;
 	color: @text-color-2;
 	border: @border;
 	background-color: @line-color-1;
@@ -270,4 +270,12 @@
 		}
 	}
 }
-
+.btn-box-tool {
+	min-width: 20px;
+  color: @text-color-2;
+  padding: 5px;
+  background: transparent;
+  &:hover {
+  	color: @primary-color;
+  }
+}
