--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -209,3 +209,47 @@
 		font-weight: 600;
 	}
 }
+.address-list {
+	width: 100%;
+	margin-top: 30px;
+	float: left;
+	.accordion-section {
+		&:first-child {
+			.address {
+				border-top: @border;
+			}
+		}
+	}
+}
+.accordion,
+.accordion * {
+	-webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.address {
+	padding: 20px 0;
+	margin: 0;
+	list-style: none;
+  border-bottom: @border;
+	li {
+		list-style: none;
+		padding: 0;
+		p {
+			margin-bottom: 0;
+		}
+	}
+}
+.address-details {
+	padding: 20px 0;
+}
+.box-tools {
+	button {
+		&:first-child {
+			margin-right: 10px;
+		}
+	}
+}
+.add-address-form {
+	display: none;
+}
